--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -2,20 +2,17 @@
 
   <%= render 'error_messages' %>
 
-  <%= f.label :名前 %>
-  <%= f.text_field :name, class: 'form-control' %>
-
-  <%= f.label :メールアドレス %>
-  <%= f.email_field :email, class: 'form-control' %>
+  <%= f.label :ID %>
+  <%= f.text_field :name, class: 'form-control', placeholder: "３〜７文字程度" %>
 
   <%= f.label :パスワード %>
-  <%= f.password_field :password, class: 'form-control' %>
+  <%= f.password_field :password, class: 'form-control', placeholder: "半角英数字６文字以上" %>
 
   <%= f.label :パスワード確認 %>
   <%= f.password_field :password_confirmation, class: 'form-control' %>
 
   <%= f.label :世帯人数（＊ランキングに必要な情報です） %>
-  <%= f.number_field :setai, class: 'form-control' %>
+  <%= f.number_field :setai, class: 'form-control', placeholder: "半角の数字" %>
 
   <%= f.label :プロフィール画像 %>
   <%= f.file_field :avatar, class: "form-control floating-label", placeholder: "画像アップロード" %>
