--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -723,7 +723,7 @@ h1.ribbon {
 
 .cuisine {
   float: right;
-  position: fixed;
+  position: absolute;
   padding-left: 100px;
   ul {
     border-collapse: collapse;
