--- a/app/views/meals/index.html.erb
+++ b/app/views/meals/index.html.erb
@@ -1,7 +1,7 @@
 <h2>カロリー手帳</h2>
 <div class="techo">
   <ul class="date">
-    <% @meal_date.each do |m| %>
+    <% @meals.each do |m| %>
       <li><%= m.created_at.in_time_zone('Tokyo').to_s(:published_on) %></li>
     <% end %>
   </ul>
@@ -10,9 +10,10 @@
     <% @meals.each do |meal| %>
       <% Cuisine.where(id: meal.cuisine_id).each do |i| %>
         <li><%= i.name %><br>⭐️
-         <%= i.calorie %>カロリー
-        </li>
+        <%= i.calorie %>カロリー
       <% end %>
+          <%= link_to '削除', "/meals/#{meal.id}", method: :delete %>
+          </li>
     <% end %>
   </ul>
 </div>
