--- a/app/views/kakeibos/show.html.erb
+++ b/app/views/kakeibos/show.html.erb
@@ -27,7 +27,7 @@
           <% env_ave = ((964.58 + 253.39 + 46.84) * @user.setai / 12).round(1) %>
           <td><%= @month.month %></td>
           <% if denki > denki_ave %>
-            <th class="over"><%= dennki %>kg</th>
+            <th class="over"><%= denki %>kg</th>
           <% else %>
             <th class="low"><%= denki %>kg</th>
           <% end %>
