--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,7 +5,11 @@
       <div class="user_nav grid-6">
         <a class="ny1 bt" href="/kakeibos/new">家計簿入力</a>
         <a class="ny2 bt" href="/meals/new">食事入力</a>
-        <div class="image1" style="background-image: url(<%= current_user.avatar.url(:medium) %>);"></div>
+        <% if current_user.avatar_file_name.blank? %>
+          <div class="image1"><%= image_tag 'alt.png', :size => "100x100" %></div>
+        <% else %>
+          <div class="image1" style="background-image: url(<%= current_user.avatar.url(:medium) %>);"></div>
+        <% end %>
           <span><%= current_user.name %>
             <ul class="user__info">
               <li><a href="/users/<%= current_user.id %>", class="btn">マイページ</a></li>
