--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,10 +1,18 @@
+
+<link href="http://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.css" rel="stylesheet">
+<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
+<script>
+$(function(){
+  $("#menubtn").click(function(){
+    $("#menu").slideToggle();
+  });
+});
+</script>
 <div class="navbar navbar-inverse navbar-fixed-top">
 <header class="header">
   <div class="header__bar row">
     <% if logged_in? %>
       <div class="user_nav grid-6">
-        <a class="ny1 bt" href="/kakeibos/new">家計簿入力</a>
-        <a class="ny2 bt" href="/meals/new">食事入力</a>
         <% if current_user.avatar_file_name.blank? %>
           <div class="image1"><%= image_tag 'ha.png', :size => "100x100" %></div>
         <% else %>
@@ -17,6 +25,15 @@
               <li><%= link_to "設定", edit_user_path(current_user), class: "btn" %></li>
             </ul>
           </span>
+          <button type="button" id="menubtn">
+            <i class="fa fa-bars"></i><span>MENU</span>
+          </button>
+          <nav class="menu" id="menu">
+            <ul class="user__info">
+              <li><a class="btn" href="/kakeibos/new">家計簿入力</a></li>
+              <li><a class="btn" href="/meals/new">食事入力</a></li>
+            </ul>
+          </nav>
       </div>
     <% else %>
       <div class="grid-6">
