--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -12,7 +12,7 @@
             <ul class="user__info">
               <li><a href="/users/<%= current_user.id %>", class="btn">マイページ</a></li>
               <li><%= link_to "ログアウト", logout_path, method: "delete", class: "btn" %></li>
-              <li><%= link_to "設定", edit_user_path(current_user), class: "btn" %></li>
+              <li><%= link_to "設定の変更", edit_user_path(current_user), class: "btn" %></li>
             </ul>
           </span>
       </div>
@@ -20,9 +20,9 @@
         <i class="fa fa-bars"></i><span>MENU</span>
           <ul>
             <li><%= link_to "ホーム", users_path, class: "btn" %></li>
+            <li><%= link_to "環境負荷", kakeibo_path(current_user.id), class: "btn" %></li>
             <li><a class="btn" href="/kakeibos/new">家計簿入力</a></li>
             <li><a class="btn" href="/meals/new">食事入力</a></li>
-            <li><%= link_to "環境負荷", kakeibo_path(current_user.id), class: "btn" %></li>
             <li><%= link_to "食事記録", meals_path, class: "btn" %></li>
             <li><%= link_to "家計簿", kakeibos_path, class: "btn" %></li>
           </ul>
