--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -484,7 +484,8 @@ header.header {
     span {
       margin-left: -440px;
       margin-top: -70px;
-      width: 180px;
+      width: 340px;
+      text-align: center;
       font-size: 30px;
       cursor: pointer;
       padding: 10px;
@@ -523,15 +524,16 @@ header.header {
 
 /* トグルボタン */
 #menubtn {
-  width: 90px;
-  height: 50px;
+  width: 100px;
+  height: 60px;
   padding: 6px 12px;
   border: solid 1px #aaaaaa;
   border-radius: 5px;
   background-color: #ffffff;
   position: absolute;
-  top: 30px;
-  right: 15px;
+  top: 10px;
+  right: 25px;
+  font-size: 24px;
   cursor: pointer;
   &:hover {
     background-color: #dddddd;
