--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,6 @@
 <% provide(:title, "ユーザー情報更新") %>
 <% provide(:button_text, "更新") %>
-<h1>プロファイルの更新</h1>
+<h1>設定の変更</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= render "form" %>
