--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,7 +6,7 @@
         <h2><%= @user.name %></h2>
         <% if current_user.id == @user.id %>
           <div class="profile_edit">
-            <%= link_to 'プロフィール編集', edit_user_path(current_user) %>
+            <%= link_to '設定の変更', edit_user_path(current_user) %>
           </div>
         <% end %>
       </h1>
