--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -493,7 +493,7 @@ header.header {
       &:after {
         content: '▼';
         font-size: .7em;
-        margin-left: -4px;
+        margin-right: -40px;
       }
       &:hover ul {
         color: $accent;
@@ -508,13 +508,15 @@ header.header {
       border-left: 1px solid #d8d8d8;
       border-right: 1px solid #d8d8d8;
       box-shadow: 1px 2px 5px rgba(0,0,0,0.1);
+      width: 200px;
       li {
         background-color: #f0f0f0;
-        padding: 5px;
+        padding: 10px;
         a {
           display: block;
           text-align: left;
           border-bottom: 1px solid #d8d8d8;
+          width: 180px;
         }
       }
     }
@@ -545,6 +547,8 @@ header.header {
   ul {
     display: none;
     position: relative;
+    width: 170px;
+    margin-left: -70px;
     top: 10px;
     right: 0;
     border-left: 1px solid #d8d8d8;
@@ -552,9 +556,9 @@ header.header {
     box-shadow: 1px 2px 5px rgba(0,0,0,0.1);
     li {
       background-color: #f0f0f0;
-      width: 150px;
-      margin-left: -70px;
-      padding: 5px;
+      width: 170px;
+      margin-left: 0px;
+      padding: 10px;
       a {
         display: block;
         text-align: left;
@@ -568,26 +572,16 @@ header.header {
 /* profile */
 
 .image1 {
-      width: 150px;
-      height: 150px;
-      border: 4px solid #fff;
-      margin-top: -55px;
-      margin-left: -15px;
-      background-size: cover;
-      background-position: center center;
-      border-radius: 3px;
+  width: 150px;
+  height: 150px;
+  border: 4px solid #fff;
+  margin-top: -55px;
+  margin-left: -15px;
+  background-size: cover;
+  background-position: center center;
+  border-radius: 3px;
 }
 
-.image3 {
-      width: 200px;
-      height: 200px;
-      border: 4px solid #fff;
-      background-size: cover;
-      background-position: center center;
-      border-radius: 3px;
-      position: relative;
-      margin-left: 80px;
-    }
 
 .profile_edit {
   text-align: center;
