--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,6 +1,6 @@
 
 <div class="ribbon-wrap">
-  <h1 class="ribbon">ランキング＊<%= @setai.setai %>人世帯＊</h1>
+  <h1 class="ribbon">ランキング</h1>
 </div>
 <div class="contents">
   <h2 class="text-small hr-bottom--thin">
@@ -18,7 +18,6 @@
         <h3 class="rank">
           <%= user.name %>
         </h3>
-        <img src="<%= user.avatar_file_name %>" alt="">
       </li>
     <% end %>
   </ul>
@@ -40,7 +39,6 @@
         <h3 class="rank">
           <%= user.name %>
         </h3>
-        <img src="<%= user.avatar_file_name %>" alt="">
       </li>
     <% end %>
   </ul>
@@ -62,7 +60,6 @@
         <h3 class="rank">
           <%= user.name %>
         </h3>
-        <img src="<%= user.avatar_file_name %>" alt="">
       </li>
     <% end %>
   </ul>
