--- a/app/views/meals/new.html.erb
+++ b/app/views/meals/new.html.erb
@@ -55,7 +55,7 @@
         </tr>
         <tr>
           <th>
-            <%= image_tag 'siru.png', :size => "100x100" %> 汁物
+            <%= image_tag 'siru.png', :size => "100x100" %> 汁物・スープ
           </th>
           <td>
             <%= form_for @meal do |f| %>
