--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -57,26 +57,26 @@
     </tbody>
   </table>
   <div class="graph">
-    <h3 id="env">　合計CO2排出量の推移（kg）</h3>
+    <h3 id="env">　月別CO2排出量の推移（kg）</h3>
       <%= column_chart @env, height: "500px", width: "450px", colors: ["dcc2ff"] %>
   </div>
 </div>
 <% end %>
 <hr>
 <div class="contents">
-  <h1><%= image_tag 'vw.jpeg', :size => "50x50" %> 総バーチャルウォーター量</h1>
-  <div class="vw"><h1><%= @meal_vw.round.floor.to_s(:delimited) %> L</h1></div>
+  <h1><%= image_tag 'vw.jpeg', :size => "50x50" %> 今月のバーチャルウォーター量</h1>
+  <div class="vw"><h1><%= @meal_vw %> L</h1></div>
   <div class="graph">
-    <h3 id="env">　バーチャルウォーター量推移（kg）</h3>
+    <h3 id="env">　毎日のバーチャルウォーター量推移（L）</h3>
       <%= column_chart @vw, height: "500px", width: "450px", colors: ["66FFFF"] %>
   </div>
 </div>
 <hr>
 <div class="contents">
-  <h1>総フードマイレージCO2排出量</h1>
+  <h1>今月のフードマイレージCO2排出量</h1>
   <div class="fm"><h1><%= @meal_fm.round.floor.to_s(:delimited) %> g</h1></div>
   <div class="graph">
-    <h3 id="env">　フードマイレージCO2排出量推移（kg）</h3>
+    <h3 id="env">　毎日のフードマイレージCO2排出量推移（g）</h3>
       <%= column_chart @fm, height: "500px", width: "450px", colors: ["ccCC66"] %>
   </div>
 </div>
